Streamlined code, added comments

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,3 +14,23 @@ body,html {
 #footer {
     margin: 0;
 }
+
+
+/*
+// for making the header disappear on mobile
+body {
+  padding-top: 40px; // same as header height
+}
+header {
+  background: #f5b335;
+  height: 40px;
+  position: fixed;
+  top: 0;
+  transition: top 0.2s ease-in-out;
+  width: 100%;
+}
+// we'll add this class using javascript
+.nav-up {
+  top: -40px; // same as header height. use variables in LESS/SASS
+}
+*/
